change comp names, revert to only <section> & no heading lower than <h2>

--- a/tusculum/package.json
+++ b/tusculum/package.json
@@ -24,8 +24,8 @@
   "exports": {
     "./package.json": "./package.json",
     "./actions": "./actions/index.js",
-    "./components/DocumentHeading.svelte": "./components/DocumentHeading.svelte",
-    "./components/DocumentSection.svelte": "./components/DocumentSection.svelte",
+    "./components/H.svelte": "./components/H.svelte",
+    "./components/Section.svelte": "./components/Section.svelte",
     "./constants": "./constants/index.js",
     ".": "./index.js"
   },
