--- a/tusculum/package.json
+++ b/tusculum/package.json
@@ -1,6 +1,10 @@
 {
   "name": "tusculum",
   "version": "0.0.1",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/realgoatish/source-tusculum/tree/main/tusculum"
+  },
   "devDependencies": {
     "@playwright/test": "^1.22.2",
     "@sveltejs/adapter-auto": "next",
