--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.0.3",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/realgoatish/source-tusculum/tree/main/tusculum",
+		"url": "https://github.com/realgoatish/source-tusculum.git",
 		"directory": "tusculum"
 	},
 	"scripts": {
