--- a/tusculum/package.json
+++ b/tusculum/package.json
@@ -1,9 +1,20 @@
 {
   "name": "tusculum",
+  "author": "realgoatish",
+  "keywords": [
+    "svelte",
+    "headings",
+    "outlines",
+    "HTML sections",
+    "HTML outlines",
+    "accessibility",
+    "a11y",
+    "front-end"
+  ],
   "version": "0.0.4",
   "repository": {
     "type": "git",
-    "url": "https://github.com/realgoatish/source-tusculum.git",
+    "url": "git+https://github.com/realgoatish/source-tusculum.git",
     "directory": "tusculum"
   },
   "devDependencies": {
