--- a/tusculum/package.json
+++ b/tusculum/package.json
@@ -11,11 +11,10 @@
     "a11y",
     "front-end"
   ],
-  "version": "0.0.5",
+  "version": "0.0.6",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/realgoatish/source-tusculum.git",
-    "directory": "tusculum"
+    "url": "git+https://github.com/realgoatish/tusculum.git"
   },
   "devDependencies": {
     "@playwright/test": "^1.22.2",
