--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
-		"package": "svelte-kit package",
+		"package": "svelte-kit sync && svelte-package",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync",
 		"test": "playwright test",
@@ -32,6 +32,7 @@
 		"@playwright/test": "^1.22.2",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
+		"@sveltejs/package": "^1.0.0-next.3",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
 		"@typescript-eslint/parser": "^5.27.0",
 		"eslint": "^8.16.0",
@@ -45,7 +46,7 @@
 		"svelte2tsx": "^0.5.12",
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.4",
-		"vite": "^3.0.0"
+		"vite": "^3.1.0-beta.1"
 	},
 	"type": "module"
 }
