--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
 	},
 	"scripts": {
 		"dev": "vite dev",
-		"build": "vite build",
-		"package": "svelte-kit sync && svelte-package",
+		"build": "svelte-kit sync && svelte-package",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync",
 		"test": "playwright test",
