--- a/tusculum/package.json
+++ b/tusculum/package.json
@@ -11,7 +11,7 @@
     "a11y",
     "front-end"
   ],
-  "version": "0.0.9",
+  "version": "0.0.10",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/realgoatish/tusculum.git"
@@ -20,6 +20,7 @@
     "@playwright/test": "^1.22.2",
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
+    "@sveltejs/package": "^1.0.0-next.3",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "eslint": "^8.16.0",
@@ -33,7 +34,7 @@
     "svelte2tsx": "^0.5.12",
     "tslib": "^2.3.1",
     "typescript": "^4.7.4",
-    "vite": "^3.0.0"
+    "vite": "^3.1.0-beta.1"
   },
   "type": "module",
   "exports": {
