--- a/package.json
+++ b/package.json
@@ -12,6 +12,15 @@
 		"front-end"
 	],
 	"version": "0.0.17",
+	"files": [
+		"dist"
+	],
+	"exports": {
+		".": {
+			"types": "./dist/index.d.ts",
+			"svelte": "./dist/index.js"
+		}
+	},
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/realgoatish/tusculum.git"
@@ -30,7 +39,7 @@
 	"devDependencies": {
 		"@playwright/test": "^1.22.2",
 		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/kit": "next",
+		"@sveltejs/kit": "^1.5.0",
 		"@sveltejs/package": "^1.0.0-next.3",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
 		"@typescript-eslint/parser": "^5.27.0",
@@ -45,7 +54,7 @@
 		"svelte2tsx": "^0.5.12",
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.4",
-		"vite": "^3.1.0-beta.1"
+		"vite": "^4.2.0"
 	},
 	"type": "module"
 }
