--- a/package.json
+++ b/package.json
@@ -38,23 +38,24 @@
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.22.2",
-		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/kit": "^1.20.4",
-		"@sveltejs/package": "^1.0.0-next.3",
+		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/package": "^2.2.5",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
 		"@typescript-eslint/parser": "^5.27.0",
 		"eslint": "^8.16.0",
 		"eslint-config-prettier": "^8.3.0",
-		"eslint-plugin-svelte3": "^4.0.0",
+		"eslint-plugin-svelte": "^2.35.1",
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.10.1",
 		"svelte": "^4.0.0",
 		"svelte-check": "^3.4.3",
 		"svelte-preprocess": "^5.0.3",
-		"svelte2tsx": "^0.5.12",
+		"svelte2tsx": "^0.6.8",
 		"tslib": "^2.3.1",
 		"typescript": "^5.0.0",
-		"vite": "^4.2.0"
+		"vite": "^5.0.0"
 	},
 	"type": "module"
 }
