--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
 		"lint": "prettier --check --plugin-search-dir=. . && eslint .",
 		"format": "prettier --write --plugin-search-dir=. ."
 	},
+	"dependencies": {
+		"svelte": "^4.0.0"
+	},
 	"devDependencies": {
 		"@playwright/test": "^1.22.2",
 		"@sveltejs/adapter-auto": "^3.0.0",
@@ -49,7 +52,6 @@
 		"eslint-plugin-svelte": "^2.35.1",
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.10.1",
-		"svelte": "^4.0.0",
 		"svelte-check": "^3.4.3",
 		"svelte-preprocess": "^5.0.3",
 		"svelte2tsx": "^0.6.8",
